add: base-markup

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,23 +1,17 @@
 @import './utils/normalize.css';
 @import './utils/fonts.css';
 @import './utils/reset.css';
+@import './utils/main.css';
 
-*,
-*::after,
-*::before {
-  box-sizing: border-box;
-}
+@import './components/main-chart.css';
+@import './components/title.css';
+@import './components/chart.css';
+@import './components/chart-slider.css';
+@import './components/checkbox.css';
 
-html, body {
-  box-sizing: inherit;
-}
 
-body {
-  font-family: UbuntuRegular, sans-serif;  
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.1;
-}
+
+
 
 
 
