--- a/styles/utils/reset.css
+++ b/styles/utils/reset.css
@@ -6,3 +6,21 @@ h5,
 h6 {
   margin: 0;
 }
+
+canvas {
+  display: block;
+  width: 100%;
+}
+
+label,
+input {
+  display: block;
+  cursor: pointer;
+}
+
+button {
+  display: block;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+}
